# sql-helper

./: .env.example  .gitignore  pyproject.toml
sql_helper/: main.py
